--- a/src/app/movies/movies-component/movie/movie.component.html
+++ b/src/app/movies/movies-component/movie/movie.component.html
@@ -1,7 +1,7 @@
 <div class="movie_card">
-    <img src="{{img}}{{movie.poster_path}}" alt="{{movie.title}}"/>
+  <img src="{{img}}{{movie.poster_path}}" alt="{{movie.title}}"/>
   <p>{{movie.title}}</p>
-  <a [routerLink]="['movie-detail/',movie.id]" class="movie_info_link">
+  <a [routerLink]="['/movie-detail/',movie.id]" class="movie_info_link">
     <div class="movie_info">
       <h2>{{movie.title}}</h2>
       <p>{{movie.overview}}</p>
