--- a/src/app/movies/movies-component/movie-detail/movie-detail.component.html
+++ b/src/app/movies/movies-component/movie-detail/movie-detail.component.html
@@ -19,7 +19,8 @@
     <div class="production_companies_container">
       <h2>Production_companies:</h2>
       <a *ngFor="let companie of movieDetail.production_companies" [routerLink]="['/movie-detail/',companie.id]">
-        <div><p>{{companie.name}}</p></div></a>
+        <div><p>{{companie.name}}</p></div>
+      </a>
     </div>
   </div>
   <img src="{{img}}{{movieDetail.poster_path}}" alt=""/>
